@@ -1743,6 +1743,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "INTEGER-DECODE-SINGLE-FLOAT" "INTERNAL-ERROR"
                #!+win32 "HANDLE-WIN32-EXCEPTION"
                "INTERNAL-TIME" "INTERNAL-SECONDS"
+               "INTERNAL-SECONDS-LIMIT" "SAFE-INTERNAL-SECONDS-LIMIT"
                "INTERSECTION-TYPE" "INTERSECTION-TYPE-P"
                "INTERSECTION-TYPE-TYPES" "INVALID-ARG-COUNT-ERROR"
                "LOCAL-INVALID-ARG-COUNT-ERROR"
