@@ -54,16 +54,27 @@
   '(or integer (member nil :newest :wild :unspecific)))
 
 ;;; Internal time format.
-;;; 62 bits should give
-;;; one hundred forty-six million one hundred thirty-five thousand five hundred twenty years of runtime
+;;; 61 bits should give
+;;; seventy-three million one hundred seventeen thousand eight hundred two years of runtime
 ;;; It's dangerous to run SBCL for that long without updating.
 ;;; And it'll be a fixnum on 64-bit targets.
 ;;; The result from querying get-internal-run-time with multiple cores
 ;;; running full tilt will exhaust this faster, but it's still plenty enough.
-(sb!xc:deftype internal-time () '(unsigned-byte 62))
-(sb!xc:deftype internal-seconds ()
-  '(unsigned-byte
-    #.(- 62 (floor (log sb!xc:internal-time-units-per-second 2)))))
+(def!constant internal-time-bits 61)
+(sb!xc:deftype internal-time () `(unsigned-byte ,internal-time-bits))
+
+(def!constant internal-seconds-limit
+    (floor (ash 1 internal-time-bits) sb!xc:internal-time-units-per-second))
+(sb!xc:deftype internal-seconds () `(integer 0 ,internal-seconds-limit))
+(def!constant safe-internal-seconds-limit
+    ;; Dropping one bit to ensure that
+    ;;
+    ;;  (let ((seconds (the (integer 0 #.safe-internal-seconds-limit) ...)))
+    ;;    (truncate (* 1000 (float seconds 1.0f0))))
+    ;;
+    ;; doesn't go beyond the INTERNAL-TIME range due to rounding
+    ;; errors.
+    (floor (ash 1 (1- internal-time-bits)) sb!xc:internal-time-units-per-second))
 
 (sb!xc:deftype bignum-element-type () 'sb!vm:word)
 (def!constant maximum-bignum-length
