@@ -406,19 +406,22 @@
       (sleep 0.2))
     (assert (eq (join-thread child) 't))))
 
-(with-test (:name (:grab-mutex :timeout+deadline))
-  (let ((m (make-mutex))
-        (w (make-semaphore)))
-    (with-mutex (m)
-      (let ((th (make-thread #'(lambda ()
-                                 (sb-sys:with-deadline (:seconds 0.0)
-                                   (handler-case
-                                       (grab-mutex m :timeout 0.0)
-                                     (sb-sys:deadline-timeout ()
-                                       (signal-semaphore w)
-                                       :deadline)))))))
-        (wait-on-semaphore w)
-        (assert (eq (join-thread th) :deadline))))))
+(with-test (:name (:grab-mutex :timeout+deadline :lp-1727789))
+  (flet ((test (deadline)
+           (let ((m (make-mutex))
+                 (w (make-semaphore)))
+             (with-mutex (m)
+               (let ((th (make-thread #'(lambda ()
+                                          (sb-sys:with-deadline (:seconds 0.0)
+                                            (handler-case
+                                                (grab-mutex m :timeout deadline)
+                                              (sb-sys:deadline-timeout ()
+                                                (signal-semaphore w)
+                                                :deadline)))))))
+                 (wait-on-semaphore w)
+                 (assert (eq (join-thread th) :deadline)))))))
+    (test 0.0)
+    (test 10000000000000000000000)))
 
 (with-test (:name (:grab-mutex :waitp+deadline))
   (let ((m (make-mutex)))
